--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-image: linear-gradient(90deg, #3B3B98, #182C61);
     color: white;
     font-family: "Quicksand", sans-serif;
-    mid-height: 100vh;
+    min-height: 100vh;
 }
 
 header {
@@ -59,6 +59,7 @@ form button:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.5s ease;
 }
 
 .todo li {
@@ -78,3 +79,53 @@ form button:hover {
     background: #70a1ff;
 }
 
+.todo-item {
+  padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
+    pointer-events: none;
+}
+
+.completed {
+    text-decoration: line-through ;
+    opacity: 0.5;
+}
+
+select {
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
+ outline: none;
+ border: none;
+}
+
+.select {
+    margin: 1rem;
+    position: relative;
+    overflow: hidden;
+}
+
+select {
+    color: #182C61;
+    width: 10rem;
+    cursor: pointer;
+    padding: 1rem;
+}
+
+.select::after {
+    content: "\25BC";
+    position: absolute;
+    background: #3B3B98;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    pointer-events: none; 
+    transition: all 0.3s ease;
+}
+
+.select:hover::after {
+    background: white;
+    color: #3B3B98;
+}
